--- a/Admin_Frontend/css/signup.css
+++ b/Admin_Frontend/css/signup.css
@@ -58,27 +58,7 @@ a
     display: none;
   }
   
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
 /* Navbar CSS END */
 
 
@@ -130,7 +110,6 @@ label {
     font-weight: bold;
     font-size: 15px;
 }
-
 form {
     width: 350px;
     height: 500px;
@@ -140,14 +119,12 @@ form {
     background: rgba(255,255,255,0.5);
     border-radius: 10px;
 }
-#signupForm{
-    margin-top: 4%;
-}
-#pwd+p {
-    width: 100%;
+
+#password+p {
+    width: 95%;
     height: 40px;
     margin: auto;
-    text-align: center;
+    text-align: justify;
     font-size: 12px;
     font-weight: bold;
 }
